# ProjectTwo

./: CMakeLists.txt  config.h.in  oldcmake.txt
include/: CMakeLists.txt  bishop.h  board.h  chessPiece.h  king.h  knight.h  pawn.h  pieceColourType.h  queen.h  rook.h
src/: CMakeLists.txt  bishop.cpp  board.cpp  chessPiece.cpp  king.cpp  knight.cpp  main.cpp  main2.cpp  pawn.cpp  queen.cpp  rook.cpp
